--- a/latex/citations.bib
+++ b/latex/citations.bib
@@ -1089,3 +1089,14 @@ volume = {7},
 journal = {Musica e Tecnologia},
 doi = {10.13128/Music_Tec-13210}
 }
+
+@article{msp,
+author = {Brown, Judith and Puckette, Miller},
+year = {1992},
+month = {11},
+pages = {2698},
+title = {"An efficient algorithm for the calculation of a constant Q transform"},
+volume = {92},
+journal = {Journal of the Acoustical Society of America},
+doi = {10.1121/1.404385}
+}
